duplicate label fix

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -612,7 +612,7 @@ And if we set the background colour of each area of the plot to the decision the
 classifier would make, we can see that the decision is always "benign," corresponding to the blue colour:
 
 <center>
-```{r 05-upsample, echo=FALSE, fig.height = 4, fig.width = 5}
+```{r 05-upsample-2, echo=FALSE, fig.height = 4, fig.width = 5}
 
 #train a knn classifier
 features <- rare_cancer %>% select(Perimeter, Concavity)
