--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -237,8 +237,8 @@ As with plain text files, you should always try to explore the data file before 
 
 ## Reading data from a database
 
-Another very common form of data storage to be read into R for the purpose of data analysis is the relational database. There are many Relational Database Management Systems (RDBMS),  such as
-SQLite, MySQL, PosgreSQL, Oracle, and many more. Almost all RDBMS employ SQL (*structured query language*) to pull data from the database. Thankfully, you don't need to know SQL
+Another very common form of data storage to be read into R for the purpose of data analysis is the relational database. There are many relational database management systems, such as
+SQLite, MySQL, PosgreSQL, Oracle, and many more. Almost all employ SQL (*structured query language*) to pull data from the database. Thankfully, you don't need to know SQL
 to analyze data from a database; 
 several packages have been written 
 that allow R to connect to relational databases and use the R programming language as the front end (what the user types in) to pull data from them. In this book we will 
@@ -246,7 +246,7 @@ give examples of how to do this using R with SQLite and PostgreSQL databases.
 
 ### Reading data from a SQLite database
 
-SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one's computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
+SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
 
 The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` (database interface) package. This does not read in the data, but simply tells R where the database is and opens up a communication channel.
 
