one more small RMSE > RMSPE typo...

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -190,7 +190,7 @@ Here we see that the smallest $RMSPE$ is from the model where $k$ = `r knn_reg_c
 
 ### $RMSPE$ versus $RMSE$
 
-The error output we have been getting from `caret` to assess how well our k-nn regression models predict is labelled as `RMSE`, standing for root mean squared error. Why is this so? In statistics we try to be very precise with our language to indicate whether we are calculating the error on predicting on the training data (in sample prediction) versus predicting on the testing data (out of sample prediction). When we are predicting on the training data and we are interested in assessing model goodness of fit on the data used to fit the model, we say $RMSE$. Whereas when we are predicting on the testing data and we are trying to assess how well our model will do at predicting on future, unseen data (e.g., the validation set(s), or the testing set) we say $RMSPE$. `caret` doesn't really know what you are doing (using training or testing data for prediction) and so it just uses the term $RMSE$ regardless. The equation for calculating $RMSE$ and $RMSPE$ is the same, all that changes is where the $y$'s come from.
+The error output we have been getting from `caret` to assess how well our k-nn regression models predict is labelled as `RMSE`, standing for root mean squared error. Why is this so? In statistics we try to be very precise with our language to indicate whether we are calculating the error on predicting on the training data (in sample prediction) versus predicting on the testing data (out of sample prediction). When we are predicting on the training data and we are interested in assessing model goodness of fit on the data used to fit the model, we say $RMSPE$. Whereas when we are predicting on the testing data and we are trying to assess how well our model will do at predicting on future, unseen data (e.g., the validation set(s), or the testing set) we say $RMSPE$. `caret` doesn't really know what you are doing (using training or testing data for prediction) and so it just uses the term $RMSE$ regardless. The equation for calculating $RMSE$ and $RMSPE$ is the same, all that changes is where the $y$'s come from.
 
 ## How do different k's affect k-nn regression predictions
 
