TC regression I edits

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,4 +1,4 @@
-# Regression, continued {#regression2}
+# Regression II: Linear regression {#regression2}
 
 ## Overview 
 Introduction to linear regression models. We will also begin to compare k-nn to linear models in the context of regression.
