fixing bugs in 08-regression id'ed by student

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -306,7 +306,7 @@ Remembering that the equation for a plane is:
 $$Y = \beta_0 + \beta_1X_1 + \beta_2X_2$$
 Where:
 
-- $\beta_0$ is the y-intercept of the line (the value where the line cuts the y-axis)
+- $\beta_0$ is the y-intercept of the hyperplane (the value where it cuts the y-axis)
 - $\beta_1$ is the slope for the first predictor
 - $X_1$ is the first predictor
 - $\beta_2$ is the slope for the second predictor
@@ -329,9 +329,9 @@ lm_mult_test_results <- defaultSummary(lm_modelvalues)
 lm_mult_test_results[[1]]
 ```
 
-We get that the $RMSPE$ for the multivariate linear regression model of `r format(lm_mult_test_results[[1]], scientific = FALSE)`. This prediction error is less than the prediction error for the multivariate k-nn regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last chapter, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was 86688.47 which is less than that for our more complex model. Thus, again for interpretability sake as well as performance, we should in the end choose the simple linear regression model for this data set. 
+We get that the $RMSPE$ for the multivariate linear regression model of `r format(lm_mult_test_results[[1]], scientific = FALSE)`. This prediction error is less than the prediction error for the multivariate k-nn regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last section, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was `r format(lm_test_results[[1]], scientific = FALSE)` which is less than that for our more complex model, meaning that it performed better at predicting on the test data set.
 
-Should we always end up choosing a simple linear regression as our model? No! And you never know what model will be the best until you go through this process. Exploratory data analysis can give you some hints, but until you look at the test error to compare the models you don't really know.
+Should we always end up choosing a simple linear regression as our model? No! And you never know what model will be the best until you go through this process. Exploratory data analysis can give you some hints, but until you look at the prediction errors to compare the models you don't really know. Additionally, here we compare test errors purely for the purposes of teaching. In practice, if you wanted to choose compare several regression models with differing numbers of variables to see which performed the best you would use cross-validation to choose this (similar to how we use cross validation to choose k in k-nn regression). There are several well known and more advanced methods to do this that are beyond the scope of this course, and they include backward or forward selection, and L1 or L2 regularization (also known as Lasso and Ridge regression, respectively).
 
 ## The other side of regression
 
