--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -154,7 +154,7 @@ improves it by making adjustments to the assignment of data
 to clusters until it cannot improve any further. But how do we measure
 the "quality" of a clustering, and what does it mean to improve it? 
 In K-means clustering, we measure the quality of a cluster by its
-*within-cluster sum-of-squared-distances*. Computing this involves two steps:
+*within-cluster sum-of-squared-distances* (WSSD). Computing this involves two steps:
 We first compute the mean of each variable we are using to cluster the data
 over data points that are in the cluster (i.e., the *center* of the cluster). For example, suppose we have a 
 cluster containing 3 observations, and we are using two variables, $x$ and $y$, to cluster the data.
@@ -179,8 +179,7 @@ base
 
 The second step is to add up the squared distance between each point in the cluster and the cluster center.
 We use the usual distance formula that we learned about in the classification chapter.
-In the 3-observation cluster example above, we would compute the within-cluster sum-of-squared-distances
-$S^2$ via
+In the 3-observation cluster example above, we would compute the WSSD $S^2$ via
 
 $$S^2 = \left((x_1 - \mu_x)^2 + (y_1 - \mu_y)^2\right) + \left((x_2 - \mu_x)^2 + (y_2 - \mu_y)^2\right) +\left((x_3 - \mu_x)^2 + (y_3 - \mu_y)^2\right).$$
 
@@ -211,7 +210,7 @@ cluster where points are very close to the center might still have a large $S^2$
 
 We begin by picking K, and randomly assigning data to K clusters. 
 Then K-means consists of two major steps that attempt to minimize the
-within-cluster sum-of-squared-distances: 
+sum of WSSDs over all the clusters, i.e. the *total WSSD*:
 
 1. Compute the center of each cluster, and
 2. Reassign each data point to the cluster with the nearest center.
