--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -208,26 +208,23 @@ cluster where points are very close to the center might still have a large $S^2$
 
 ### The clustering algorithm
 
-We begin by picking K, and randomly assigning data to K clusters. 
+The K-means algorithm is quite simple. We begin by picking K, and uniformly randomly assigning data to K clusters. 
 Then K-means consists of two major steps that attempt to minimize the
 sum of WSSDs over all the clusters, i.e. the *total WSSD*:
 
-1. Compute the center of each cluster, and
-2. Reassign each data point to the cluster with the nearest center.
+1. **Center update:** Compute the center of each cluster.
+2. **Label update:** Reassign each data point to the cluster with the nearest center.
 
 These two steps are repeated until the cluster assignments no longer change.
-More details about each of the major algorithmic steps in K-means are provided in the following.
+For example, in the customer data example from earlier, our initialization might look like:
 
-**Initialization**
+Next, we compute the center of each cluster:
 
-This step is only performed once at the beginning.
-
-> kmeans++??
-
-**Center update**
+Then we reassign each observation to its closest center:
 
 
-**Label update**
+
+
 
 Watch the video linked to below for an explanation of the K-means clustering algorithm:
 - https://www.coursera.org/lecture/machine-learning-data-analysis/what-is-a-k-means-cluster-analysis-p94tY
@@ -245,6 +242,8 @@ just click to ignore it (i.e., no need to sign up to watch the entire video)*
 ### Random restarts
 
 K-means, unlike knn and linear regression, can get "stuck" in a bad solution.
+
+> kmeans++??
 
 ## K-means in R
 
