added commented out code to generate slides gifs

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -272,6 +272,10 @@ for (i in 1:3){
         theme(legend.position = "none") +
         geom_point(data = centers, aes(y = loyalty, x = csat, colour = label), size=10, shape="x") 
     
+    #to generate the animated version, get rid of grid.arrange and use the below two lines
+    #set the figure width to 4.35 too
+    #print(plt_ctr)
+    #print(plt_lbl)
     grid.arrange(plt_ctr, plt_lbl, nrow = 1)
 }
 ```
@@ -341,6 +345,8 @@ for (i in 1:5){
         theme(legend.position = "none") +
         geom_point(data = centers, aes(y = loyalty, x = csat, colour = label), size=10, shape = "x") 
     
+    #print(plt_ctr)
+    #print(plt_lbl)
     grid.arrange(plt_ctr, plt_lbl, nrow = 1)
 }
 ```
